# Hexis

./: .env.local  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.worker  PHILOSOPHY.md  README.md  agi  agi_cli.py  agi_init.py  agi_mcp_server.py  architecture.md  cognitive_memory_api.py  conversation.py  docker-compose.yml  hexis.toml.example  ingest.py  justfile  mcp.js  memory_tools.py  prompt_resources.py  pyproject.toml  quirks.md  schema.sql  setup_agent.py  test.py  wait-for-db.sh  worker.py
.codex/: config.toml
apps/: cli_auth.py  cli_chat.py  cli_theme.py  hexis_api.py  hexis_cli.py  hexis_init.py  hexis_mcp_server.py  hexis_web.py
apps/cli/: hexis_init.py
apps/tui/: __init__.py  chat_app.py  chat_widgets.py  dialogs.py  hexis.tcss  init_app.py  init_screens.py  init_widgets.py  theme.py
apps/workers/: worker.py
channels/: manager.py  telegram_adapter.py
characters/: nagato.json
core/: agent_api.py  agent_loop.py  cli_api.py  cognitive_memory_api.py  config.py  config_loader.py  consent.py  init_api.py  instance.py  instance_api.py  llm.py  llm_config.py  memory_tools.py  openai_codex_oauth.py  rabbitmq_bridge.py  schema.py  state.py
core/auth/: store.py
core/tools/: __init__.py  backup.py  base.py  calendar.py  config.py  email.py  filesystem.py  goals.py  mcp.py  memory.py  messaging.py  narrative.py  policy.py  registry.py  repl_bridge.py  shell.py  sync_adapter.py  web.py
db/: 00_tables.sql  01_indices.sql  02_functions_deliberate_transformation.sql  03_functions_helpers.sql  04_functions_core.sql  05_functions_provenance_trust.sql  07_functions_heartbeat.sql  08_functions_goals.sql  10_functions_initialization.sql  12_functions_boundaries.sql  13_functions_emotional_state.sql  16_functions_reflect_pipeline.sql  18_functions_tip_of_tongue.sql  19_functions_scheduling.sql  28_functions_dopamine.sql  schema.sql
docs/: CLI.md  OAUTH_OPENAI_CODEX.md  architecture.md  test_plan.md
docs/contributing/: index.md
docs/reference/: perf.md
hexis-ui/: package.json
hexis-ui/app/: globals.css  layout.tsx  page.tsx
hexis-ui/app/chat/: page.tsx
migrations/: 000_patch_personhood.sql
ops/: Dockerfile.ui  Dockerfile.worker  db-manage.sh  docker-compose.runtime.yml
prompts/: personhood.md
services/: agent.py  channel_worker.py  chat.py  conversation.py  external_calls.py  heartbeat_agentic.py  heartbeat_prompt.py  heartbeat_runner.py  ingest.py  ingest_api.py  prompt_resources.py  subconscious.py  tooling.py  worker_service.py
services/characters/: hexis.json  jarvis.json  samantha.json
services/prompts/: heartbeat_agentic.md  subconscious.md  termination_review.md
skills/: loader.py
tests/: conftest.py  utils.py
tests/cli/: test_cli.py  test_cli_auth.py  test_ingest_forwarding.py  test_init_noninteractive.py
tests/core/: test_agent_api.py  test_agent_api_sync.py  test_agent_loop.py  test_chat.py  test_cognitive_memory_extra.py  test_consent.py  test_consent_certificates.py  test_core_api.py  test_goals.py  test_ingest_api.py  test_instance.py  test_instance_api.py  test_llm.py  test_openai_codex_oauth.py  test_schema.py  test_sync_utils.py  test_tool_unification.py  test_tooling.py
tests/db/: test_affective_state.py  test_config_consent.py  test_db.py  test_deliberate_transformation.py  test_dopamine.py  test_emotional_state_additional.py  test_external_calls.py  test_finalize_heartbeat.py  test_ingestion_receipts.py  test_initialization_flow.py  test_memory_with_embeddings.py  test_narrative_context.py  test_sources_trust.py  test_subconscious_maintenance.py  test_termination_confirmation.py  test_trust_triggers.py  test_working_memory_promotion.py
tests/services/: test_heartbeat_agentic.py
tests/web/: test_web.py
(+40 files in other folders)
